--- a/executive_smach/package.xml
+++ b/executive_smach/package.xml
@@ -13,12 +13,12 @@
   <author>Jonathan Bohren</author>
   <author>Wim Meeussen</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
   <exec_depend>smach</exec_depend>
   <exec_depend>smach_ros</exec_depend>
   <exec_depend>smach_msgs</exec_depend>
 
   <export>
-    <metapackage/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
