--- a/smach/package.xml
+++ b/smach/package.xml
@@ -15,9 +15,17 @@
 
   <author>Jonathan Bohren</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+<!--  <buildtool_depend>ament_python</buildtool_depend>-->
+
+<exec_depend>rclpy</exec_depend>
+
+<test_depend>ament_copyright</test_depend>
+<test_depend>ament_flake8</test_depend>
+<test_depend>ament_pep257</test_depend>
+<test_depend>python3-pytest</test_depend>
 
   <export>
-    <rosdoc config="rosdoc.yaml"/>    
+    <rosdoc config="rosdoc.yaml"/>
+    <build_type>ament_python</build_type>
   </export>
 </package>
