--- a/smach_msgs/CMakeLists.txt
+++ b/smach_msgs/CMakeLists.txt
@@ -1,15 +1,31 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.5)
 
 project(smach_msgs)
 
-find_package(catkin REQUIRED COMPONENTS 
-  message_generation std_msgs)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-add_message_files(FILES
-  SmachContainerInitialStatusCmd.msg
-  SmachContainerStructure.msg
-  SmachContainerStatus.msg)
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic)
+endif()
 
-generate_messages(DEPENDENCIES std_msgs)
+find_package(ament_cmake REQUIRED)
+find_package(builtin_interfaces REQUIRED)
+find_package(rosidl_default_generators REQUIRED)
+find_package(std_msgs REQUIRED)
 
-catkin_package(CATKIN_DEPENDS message_runtime)
+set(msg_files
+  msg/SmachContainerInitialStatusCmd.msg
+  msg/SmachContainerStructure.msg
+  msg/SmachContainerStatus.msg)
+
+rosidl_generate_interfaces(${PROJECT_NAME}
+  ${msg_files}
+  DEPENDENCIES builtin_interfaces std_msgs
+)
+
+ament_export_dependencies(rosidl_default_runtime)
+
+ament_package()
