--- a/smach_msgs/package.xml
+++ b/smach_msgs/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>smach_msgs</name>
   <version>2.0.1</version>
   <description>
@@ -12,18 +12,23 @@
 
   <author>Jonathan Bohren</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
 
-  <depend>std_msgs</depend>
+<build_depend>builtin_interfaces</build_depend>
+ <build_depend>rosidl_default_generators</build_depend>
+ <build_depend>std_msgs</build_depend>
+ <exec_depend>builtin_interfaces</exec_depend>
+ <exec_depend>rosidl_default_runtime</exec_depend>
+ <exec_depend>std_msgs</exec_depend>
 
-  <build_depend>message_generation</build_depend>
+     <member_of_group>rosidl_interface_packages</member_of_group>
 
-  <exec_depend>message_runtime</exec_depend>
-  <build_export_depend>message_runtime</build_export_depend>
+<test_depend>ament_lint_auto</test_depend>
+<test_depend>ament_lint_common</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
-    <rosdoc config="rosdoc.yaml"/>
+    <build_type>ament_cmake</build_type>
   </export>
 </package>
 
