--- a/smach_ros/package.xml
+++ b/smach_ros/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package>
   <name>smach_ros</name>
   <version>2.0.1</version>
   <description>
@@ -18,22 +18,20 @@
 
   <author>Jonathan Bohren</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+<!--  <buildtool_depend>ament_python</buildtool_depend>-->
 
-  <build_depend>rostest</build_depend>
+    <exec_depend>smach_msgs</exec_depend>
+    <exec_depend>smach</exec_depend>
+    <exec_depend>rclpy</exec_depend>
 
-  <exec_depend>rospy</exec_depend>
-  <exec_depend>rostopic</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>std_srvs</exec_depend>
-  <exec_depend>actionlib</exec_depend>
-  <exec_depend>actionlib_msgs</exec_depend>
-
-  <exec_depend>smach</exec_depend>
-  <exec_depend>smach_msgs</exec_depend>
+<test_depend>ament_copyright</test_depend>
+<test_depend>ament_flake8</test_depend>
+<test_depend>ament_pep257</test_depend>
+<test_depend>python3-pytest</test_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <rosdoc config="rosdoc.yaml"/>    
+    <buildtool_depend>ament_python</buildtool_depend>
   </export>
 </package>
